[tool.poetry]
name = "azkv"
version = "0.1.0rc4"
description = "CLI client for the Azure Key Vault data plane"

authors = ["Oleksiy Kuzmenko <oleksiy.kuzmenko@undp.org>"]

readme = "README.md"
license = "MIT"
documentation = "https://pykv.readthedocs.io/en/latest/"

repository = "https://github.com/undp/azkv"
homepage = "https://github.com/undp/azkv"

include = [
  "CHANGELOG.md",
  "CONTRIBUTING.md",
  "LICENSE.md",
  "docs/conf.py",
  "docs/*.rst",
  "docs/*.md",
  "tests/*.py",
  "tox.ini",
]

keywords = [
  "azure",
  "CLI",
  "key vault",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Topic :: System :: Systems Administration",
]

[tool.poetry.dependencies]
azure-common = "^1.1.25"
azure-identity = ">=1.3.1,<1.4.0"
azure-keyvault-secrets = "^4.2.0"
cement = "^3.0.4"
colorlog = "^4.2.1"
jinja2 = "^2.11.2"
python = "^3.6.1"
pyyaml = "^5.3.1"
typing = "^3.7.4"

# code-format
black = {version = "^19.10b0", optional = true}
blacken-docs = {version = "^1.7", optional = true}

# code-lint
flake8 = {version = "^3.8", optional = true}
flake8-import-order = {version = "^0.18", optional = true}
flake8-bandit = {version = "^2.1", optional = true}
flake8-blind-except = {version = "^0.1", optional = true}
flake8-bugbear = {version = "^20.1", optional = true}
flake8-builtins = {version = "^1.5", optional = true}
flake8-docstrings = {version = "^1.5", optional = true}
flake8-logging-format = {version = "^0.6", optional = true}
flake8-mypy = {version = "^17.8", optional = true}
pep8-naming = {version = "^0.8", optional = true}
pygments = {version = "^2.6", optional = true}

# docs
recommonmark = {version = "^0.6.0", optional = true}
sphinx = {version = "^3.1", optional = true}
sphinx-rtd-theme = {version = "^0.5", optional = true}
sphinx-autodoc-typehints = {version = "^1.11", optional = true}

# test
pytest = {version = "^6.0", optional = true}
pytest-benchmark = {version = "^3.2", extras = ["aspect"], optional = true}
pytest-cov = {version = "^2.10", optional = true}
pytest-instafail = {version = "^0.4", optional = true}
pytest-lazy-fixture = {version = "^0.6", optional = true}
pytest-random-order = {version = "^1.0", optional = true}

[tool.poetry.extras]
code-format = [
  "black",
  "blacken-docs",
]

code-lint = [
  "flake8",
  "flake8-import-order",
  "flake8-bandit",
  "flake8-blind-except",
  "flake8-bugbear",
  "flake8-builtins",
  "flake8-docstrings",
  "flake8-logging-format",
  "flake8-mypy",
  "pep8-naming",
  "pygments",
  "pydocstyle",
]

docs = [
  "recommonmark",
  "sphinx",
  "sphinx-rtd-theme",
  "sphinx-autodoc-typehints",
]

test = [
  "pytest",
  "pytest-benchmark",
  "pytest-cov",
  "pytest-instafail",
  "pytest-lazy-fixture",
  "pytest-random-order",
]

[tool.poetry.dev-dependencies]
bump2version = "^1.0"
gitchangelog = "^3.0"
pre-commit = "^2.6"
pystache = "^0.5"
tox = "^3.18"

[tool.poetry.scripts]
azkv = 'azkv.main:main'

[tool.poetry.urls]
issues = "https://github.com/undp/azkv/issues"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  |  \.tox
  | \.pytest_cache
  | __pycache__
)/
'''

[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"
